# Mapping-Relational-Algebra

./: .gitignore  README.md
cpp-translator/: CMakeLists.txt
cpp-translator/src/: main.cpp
electron-gui/: .env.example  index.html  main.js  package-lock.json  package.json  preload.js
electron-gui/src/main/: ipc.js  main.js
electron-gui/src/main/services/: cpp.service.js  db.service.js  errors.js
electron-gui/src/preload/: preload.js
electron-gui/src/renderer/: app.js  index.html  style.css
